<resources>
    <string name="app_name">Wallpaper App</string>
    <string name="wallpaper_failed">wallpaper failed</string>
    <string name="home_icon">Home icon</string>
    <string name="favourite_icon">Favourite icon</string>
    <string name="wallpaper">4k Wallpapers</string>
    <string name="fantasy">Fantasy</string>
    <string name="dogs">Dogs</string>
    <string name="dark">Dark</string>
    <string name="flowers">FLowers</string>
    <string name="abstract_wallpapers">Abstract</string>
    <string name="preview">Preview</string>
    <string name="download">Download</string>
    <string name="wallymax">WallyMax</string>
    <string name="_4k_wallpapers"> - 4K Wallpapers</string>
    <string name="best_of_the_month">Best of Month</string>
    <string name="categories">Categories</string>
    <string name="animal">Animal</string>
    <string name="car">Car</string>
    <string name="city">City</string>
    <string name="image_view">image view</string>
    <string name="animals">Animals</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="set_on_home_screen">Set on home screen</string>
    <string name="set_on_both">Set on both screen</string>
    <string name="set_on_lock_screen">Set on Lock screen</string>
    <string name="cancel">Cancel</string>
    <string name="favourite">Favourite</string>
    <string name="set_as">Set as</string>
    <string name="minimalist">Minimalist</string>
    <string name="nature">Nature</string>
    <string name="pattern">Pattern</string>
    <string name="music">Music</string>
    <string name="neon">Neon</string>
    <string name="plants">Plants</string>
    <string name="quotes">Quotes</string>
    <string name="quirky">Quirky</string>
    <string name="sunset">Sunset</string>
    <string name="sports">Sports</string>
    <string name="texture">Texture</string>
    <string name="universe">Universe</string>
    <string name="tech">Tech</string>
    <string name="space">Space</string>
    <string name="street_art">Street Art</string>
    <string name="urban">Urban</string>
    <string name="your_favorites_list_is_empty">Your Favorites list is empty</string>
    <string name="network_is_slow_not_available">Network is slow/not available</string>
</resources>