<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:backgroundTint="@color/white"
    android:paddingBottom="@dimen/_10sdp"
    android:background="@drawable/bottom_sheet_corners"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/what_would_you_like_to_do"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:strokeColor="@color/lineColor"
        android:backgroundTint="@color/white"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:contentDescription="@string/wallpaper_failed"
                    android:src="@drawable/ic_setonhomescreen"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    />
                <TextView
                    android:id="@+id/tv_setHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/set_on_home_screen"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:contentDescription="@string/wallpaper_failed"
                    android:src="@drawable/ic_setonloctscreen" />
                <TextView
                    android:id="@+id/tv_setLock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/set_on_lock_screen"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:contentDescription="@string/wallpaper_failed"
                    android:src="@drawable/ic_setonboth" />

                <TextView
                    android:id="@+id/tv_setBoth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/set_on_both" />
            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancelDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/btncorners"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/cancel"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />


</androidx.constraintlayout.widget.ConstraintLayout>