<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/mainColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/wallpaper_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_icon"
            android:src="@drawable/ic_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="1" />

        <ImageView
            android:id="@+id/iv_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_categories"
            android:contentDescription="@string/image_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_favourite"
            app:layout_constraintStart_toEndOf="@+id/iv_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="1"
            />

        <ImageView
            android:id="@+id/iv_favourite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favourite_icon"
            android:src="@drawable/ic_favourite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_categories"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout">

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
