<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".Ui.Activities.WallpaperActivity">


    <ImageView
        android:id="@+id/iv_back_icon_wallpaper"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/image_view"
        android:src="@drawable/arrow_left"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_wallaper_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/abstract_wallpapers"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shimmer_wallpaper" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wallaper_title">

        <include layout="@layout/shimmer_toolbar" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:columnCount="2">

            <include layout="@layout/shimmer_item_view" />

            <include layout="@layout/shimmer_item_view" />

            <include layout="@layout/shimmer_item_view" />

            <include layout="@layout/shimmer_item_view" />

            <include layout="@layout/shimmer_item_view" />

            <include layout="@layout/shimmer_item_view" />


        </GridLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_is_slow_not_available"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>